<resources>
    <string name="app_name">Sayed Android Learning</string>
    <string name="initial">Sheikh Sayed Bin Rahman</string>
    <string name="bangladesh_button"> Bangladesh </string>
    <string name="pakistan_button">Pakistan</string>
    <string name="india_button"> India </string>
    <string name="banglades_details"> this is Bangladesh , our home </string>
    <string name="india_details"> this is India</string>
    <string name="pakistan_details"> This is pakistan </string>
    <string name="question_button_title">Confirmation</string>
    <string name="question_button_text">
        Are you sure ?? \n
        you want to quit ...
    </string>

    <string name="first_activity">First Activity</string>
    <string name="Second_activity">This is my Second actiovity</string>
    <string name="name">name</string>
    <string name="password_0_9">password(0-9)</string>
    <string name="e_mail">Email..</string>
    <string name="date">Date</string>
    <string name="contact_number">Contact Number</string>
    <string name="submit">Submit</string>

    <string name="item_cloth">Cloth</string>
    <string name="item_document">Document</string>
    <string name="item_food">Food</string>
    <string name="item_medicine">Medicine</string>
    <string name="item_liquid">Liquid</string>
    <string name="search_location">Search Location</string>
    <string name="Where_To">Where to</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Continue">Continue</string>
    <string name="RecipientDetails">Recipient Details</string>
    <string name="RequestDeliman">Request Deliman</string>
    <string name="confirm_delivery_location">Confirm Delivery /n Location</string>
    <string name="confirm_delivery">Confirm Delivery</string>
    <string name="location">Location</string>
    <string name="Picup_point">Pickup Point</string>
    <string name="Owner_Details">Owner Details</string>
    <string name="Next">Next</string>


</resources>
