<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_dark"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/banglades_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/bangladesh"
                android:onClick="clickOnBd"
                android:text="@string/bangladesh_button" />

            <Button
                android:id="@+id/india_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/india"
                android:onClick="clickOnIndia"
                android:text="@string/india_button" />

            <Button
                android:id="@+id/pakistan_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/pakistan"
                android:onClick="clickOnPak"
                android:text="@string/pakistan_button" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ButtonForsecondActivity"
                android:onClick="clickForSecondActivity"
                android:textStyle="bold|italic"
                android:text="Click To goto Second"
                android:layout_marginBottom="20dp"
                />

            <TextView
                android:id="@+id/mainActivityTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold|italic"
                android:textSize="30sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/cardview_default_elevation"
                />

        </LinearLayout>

    </ScrollView>

</LinearLayout>




