<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/transparent"
    android:paddingLeft="@dimen/pageLayout_left_padding"
    android:paddingRight="@dimen/pageLayout_right_padding"
    android:paddingBottom="@dimen/pageLayout_bottom_margin"
    tools:context=".ConfirmDeliveryLocation">

    <TextView
        android:id="@+id/confirm_delivery_location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/location_text"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="8dp"
        android:text="@string/confirm_delivery"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cardView"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:text="@string/location"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/BottomLayout"
        android:layout_marginBottom="60dp"
        android:background="@drawable/background_confirm_delivery_location"
        android:padding="10dp">

        <LinearLayout
            android:id="@+id/deliveryAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:weightSum="5">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_pin_drop_24px_outlined">

            </ImageView>

            <TextView
                android:id="@+id/deliveryAddressTV"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:text="Mirpur DOHS , Avenue 6"
                android:textColor="@color/textColor"
                android:textSize="14sp"
                android:textStyle="normal" />

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/OwnerDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/deliveryAddress"

            >

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/RecipientDetails"
                android:textColor="@color/textColor"
                android:textSize="15sp"
                android:textStyle="bold"

                />

            <LinearLayout
                android:id="@+id/RecipentNameNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text"
                android:layout_marginTop="12dp"
                android:weightSum="3">

                <EditText
                    android:id="@+id/RecipientNameEditText"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="2"
                    android:background="@drawable/background_search_shape"
                    android:hint="Name"
                    android:inputType="textPersonName"


                    />

                <EditText
                    android:id="@+id/RecipientNumber"
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/background_search_shape"
                    android:hint="Number"
                    android:inputType="phone" />

            </LinearLayout>

            <ScrollView
                android:id="@+id/RecipentAddressScrollbar"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_below="@+id/RecipentNameNumber"
                android:layout_marginTop="8dp">


                <EditText
                    android:id="@+id/RecipentAddress"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/background_search_shape"
                    android:hint="Address"
                    android:inputType="textPostalAddress" />

            </ScrollView>


        </RelativeLayout>

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/BottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_vertical">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:backgroundTint="@android:color/black"
            android:src="@drawable/ic_arrow_back_24px" />

        <TextView
            android:id="@+id/bottomLayoutTextViewId"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginLeft="16dp"
            android:layout_toRightOf="@id/fab"
            android:background="@drawable/background_button_continue"
            android:gravity="center_vertical"
            android:text="@string/RequestDeliman"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


    </RelativeLayout>

</RelativeLayout>